# xontrib-ptk-shell

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  migration.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yml
tests/: conftest.py  test_abbrevs.py  test_free_cwd.py  test_ptk_completer.py  test_ptk_history.py  test_ptk_multiline.py  test_ptk_shell.py  test_tools.py  test_whole_word_jumping.py  test_xontrib.py
xontrib_ptk_shell/: abbrevs.py  completer.py  environ.py  formatter.py  free_cwd.py  history.py  key_bindings.py  main.py  shell.py  updator.py  whole_word_jumping.py
