[project]
name = "xontrib-ptk-shell"
version = "0.0.1"
license = {file = "LICENSE"}
description = "feature rich prompt-toolkit based shell backend for Xonsh"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = [
    "xonsh @ git+https://github.com/jnoortheen/xonsh@rm-ptk-out",
    "prompt_toolkit>=3.0.29"
]
authors = [
    { name = "Noortheen Raja", email = "jnoortheen@gmail.com" },
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points."xonsh.xontribs"]
"ptk_shell" = "xontrib_ptk_shell.main"

[project.urls]
Homepage = "https://github.com/xonsh/xontrib-ptk-shell"
Documentation = "https://github.com/xonsh/xontrib-ptk-shell/blob/master/README.md"
Code = "https://github.com/xonsh/xontrib-ptk-shell"
"Issue tracker" = "https://github.com/xonsh/xontrib-ptk-shell/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyte>=0.8.1",
    "pytest-cov>=3.0.0",
]

[build-system]
requires = [
    "setuptools>=62",
    "wheel",               # for bdist package distribution
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xontrib"]
package-dir = {xontrib = "xontrib"}
platforms = ["any"]
include-package-data = false

[tool.setuptools.package-data]
xontrib = ["*.xsh"]

[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''

[tool.pdm]
[tool.pdm.dev-dependencies]
